# higgs

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  scorecard.yml
benchmarks/: bench_h2h.py  bench_mlx_tuning.py  bench_moe_sort.py  bench_ppl_tq.py  bench_prefix_cache_turns.py  bench_tq_configs.py  models.toml  test_bench_mlx_tuning.py
crates/higgs/: CHANGELOG.md  Cargo.toml  build.rs
crates/higgs-bench/: Cargo.toml  build.rs
crates/higgs-bench/src/: lib.rs  models.rs  server.rs  stats.rs
crates/higgs-engine/: CHANGELOG.md  Cargo.toml
crates/higgs-engine/src/: batch_engine.rs  chat_template.rs  engine.rs  lib.rs  mlx_tuning.rs  model_loader.rs  mtp.rs  paged_prefix_cache.rs  simple.rs  spec_prefill.rs
crates/higgs-engine/src/cache/: mod.rs  paged.rs  pagetable.rs  storage.rs
crates/higgs-engine/src/scheduler/: round_robin.rs
crates/higgs-models/: CHANGELOG.md  Cargo.toml
crates/higgs-models/benches/: sample_filtered.rs
crates/higgs-models/src/: bonsai_q1.rs  cache.rs  deepseek_v2.rs  gemma2.rs  lib.rs  llava_qwen2.rs  qwen3_next.rs  qwen3_vl_processor.rs  qwen3_vl_vision.rs  registry.rs  siglip.rs  turboquant.rs  utils.rs  yarn.rs
crates/higgs/benches/: sse_serialize.rs
crates/higgs/src/: anthropic_adapter.rs  attach.rs  auto_router.rs  cli_config.rs  config.rs  daemon.rs  doctor.rs  lib.rs  main.rs  metrics.rs  metrics_log.rs  reasoning.rs  router.rs  sse.rs  state.rs
crates/higgs/src/routes/: anthropic.rs  chat.rs  completions.rs  metrics.rs  mod.rs
crates/higgs/src/tui/: mod.rs
crates/higgs/src/tui/views/: errors.rs  mod.rs  models.rs  overview.rs  providers.rs  routing.rs
crates/higgs/src/types/: openai.rs
crates/higgs/tests/integration/: api_contract.rs  cli_contract.rs  cli_exec.rs  mod.rs  proxy_e2e.rs  router.rs
docs/: BONSAI_Q1.md  benchmarking.md  configuration.md  models.md
examples/basic_inference/: Cargo.toml
examples/basic_inference/src/: main.rs
examples/verify_text/: Cargo.toml
examples/verify_text/src/: main.rs
examples/verify_vision/: Cargo.toml
examples/verify_vision/src/: main.rs
scripts/: release_smoke_cached_models.sh
