[package]
name = "higgs-bench"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.38"
tokio = { workspace = true }
toml = "1.0"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }

[[bin]]
name = "bench_decode"
path = "src/bin/bench_decode.rs"

[[bin]]
name = "bench_summarize"
path = "src/bin/bench_summarize.rs"
