[package]
name = "higgs-models"
version = "1.1.1"
description = "Model architectures and weight loading for higgs (LLaMA, Mistral, Qwen2/3)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
half = "2.4"
mlx-rs.workspace = true
mlx-sys.workspace = true
safetensors = "0.4"
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "sample_filtered"
harness = false
