[package]
name = "verify_vision"
version = "0.1.0"
edition = "2021"

[dependencies]
higgs-models = { path = "../../crates/higgs-models" }
higgs-engine = { path = "../../crates/higgs-engine" }
npyz = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mlx-rs.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4", features = ["derive"] }
