[package]
name = "verify_vision"
version = "0.1.0"
edition = "2021"

[dependencies]
higgs-models = { path = "../../crates/higgs-models" }
higgs-engine = { path = "../../crates/higgs-engine" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4", features = ["derive"] }
